--- a/packages/@ourworldindata/grapher/src/controls/Controls.scss
+++ b/packages/@ourworldindata/grapher/src/controls/Controls.scss
@@ -41,6 +41,7 @@ nav.controlsRow .controls {
         border-radius: 4px;
         padding: 7px;
         color: $dark-text;
+        white-space: nowrap;
 
         &:hover {
             background: $hover-fill;
